# tapepy

./: .gitignore  Cargo.toml  README.md
examples/: complex_if.py  simple.py  simple_while.py  surfacing_parallelism.py
src/: command_dot.rs  command_edge.rs  command_hypergraph.rs  command_tape.rs  command_typing.rs  context.rs  expression_circuit.rs  hypergraph.rs  hypergraph_utils.rs  lib.rs  main.rs  predicate_tape.rs  program_tape.rs  python_builtin_signatures.rs  solver.rs  tape_language.rs  types.rs  typing.rs
src/app/: compile_run.rs  mod.rs
src/cli/: args.rs  mod.rs  output.rs
src/cli/commands/: compile.rs
src/compiler/: mod.rs
src/frontends/: python.rs
src/infra/: home_folder.rs  mod.rs
src/matching/: mod.rs  strict_open_hypergraph.rs
src/rewriting/: engine.rs  mod.rs  monomial.rs
src/tape_language/: circuit.rs  mod.rs  monomial_tape.rs  tape.rs
tests/: circuit_tests.rs  command_tape_tests.rs  expression_circuit_tests.rs  inductive_idzero_tests.rs  left_distributor_tests.rs  polynomial_product_tests.rs  predicate_tape_tests.rs  tape_arity_tests.rs  tape_tests.rs  tape_whisk_tests.rs
