[package]
name = "tapepy"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.40", default-features = true, features = ["clock"] }
clap = { version = "4.5.32", features = ["derive"] }
graphviz-rust = "0.9.6"
open-hypergraphs = { version = "0.3.1", features = ["experimental"] }
open-hypergraphs-dot = { version = "0.2.4", features = ["svg"] }
rustpython-parser = "0.4.0"
